# moyu_gateway

./: .gitignore  Cargo.toml  README.md  application.json5  moyu_gateway.postman_collection.json
.github/workflows/: rust-clippy.yml  rust.yml
db/: moyu_gateway.sql
src/: error.rs  lib.rs  main.rs
src/config/: config.rs  log.rs
src/controller/: mod.rs  sys_services_controller.rs
src/domain/: mod.rs
src/domain/table/: mod.rs  sys_services.html  sys_services.rs
src/domain/vo/: mod.rs
src/domain/vo/reqvo/: mod.rs  sys_service_reqvo.rs
src/domain/vo/respvo/: mod.rs
src/handlers/: service_handler.rs
src/service/: mod.rs  redis_service.rs  sys_services_service.rs
