[package]
name = "moyu_gateway"
version = "0.1.0"
edition = "2021"
authors = ["bv47"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#rbatis deps
rbs = { version = "4.5"}
rbatis = { version = "4.5"}
rbdc-sqlite = { version = "4.5" }
rbdc-mysql={version="4.5"}
#rbdc-pg={version="4.5"}
#rbdc-mssql={version="4.5"}
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
log = "0.4"
fast_log = {version = "1.6", features = ["mmap"]}
redis = { version = "0.24.0", features = ["tokio-comp"] }

actix-web = "4"

json5 = "0.4"
#lazy
once_cell = "1.9"
futures-util = "0.3.29"
#json
serde_json = { version = "1.0.108", features = [] }
