[package]
name = "moyu_gateway"
version = "0.1.0"
edition = "2021"
authors = ["bv47"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

#[target.x86_64-apple-darwin.dependencies]
[dependencies]
#rbatis deps
rbs = { version = "4.5"}
rbatis = { version = "4.5", features = []}
rbdc-mysql={version="4.5"}

serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
log = "0.4"
fast_log = {version = "1.6", features = ["mmap"]}
#redis = { version = "0.24.0", features = ["tokio-comp"] }
#实在是不知道这个redis怎么异步，只能用同步的了
redis = "0.24.0"

#web server
actix-web = { version = "4", default-features = false, features = ["macros"] }
actix-http = "3"

#lazy
once_cell = "1.9"
futures-util = "0.3.21"
parking_lot = "0.12.1"
sqlparser = "0.35.0"
json5 = "0.4"
#json
serde_json = { version = "1.0.108", features = [] }
lazy_static = { version = "1.4.0", features = [] }
